src/main/kotlin/com/example/todolistv2/global/error/data/ErrorResponse.kt
package com.example.todolistv2.global.error.data

data class ErrorResponse(
    val message: String,
    val data: String
)
